Trying to fix bottom ui not showing on android browser

--- a/src/index.css
+++ b/src/index.css
@@ -308,22 +308,22 @@ body, html {
 }
 
 .bottom-menu {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   height: 60px;
+  margin: 0;
+  z-index: 1005;
   background: rgba(17, 24, 39, 0.7);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+  padding: 10px;
   color: rgb(229, 231, 235);
   font-size: 0.85rem;
   font-weight: 500;
   line-height: 1.8em;
-  margin: 10px;
-  padding: 10px;
-  z-index: 1001; /* Above map, below header */
-  border-radius: 4px;
+  border-radius: 4px 4px 0 0;
 }
 
 .close-menu {
